--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,16 @@
     <script src="//cdn.jsdelivr.net/npm/@chafan/vditor@3.8.2-chafan.3/dist/js/lute/lute.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/@chafan/vditor@3.8.2-chafan.3/dist/js/mermaid/mermaid.min.js"></script>
     <meta name="description" content="Chafan 茶饭 - 有深度的社交问答网站" />
+    <meta name="keywords" content="Cha, Fan, Chafan, 茶饭, 社交, 问答" />
+    <meta name="theme-color" content="#1976d2" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="<%= VUE_APP_NAME %>">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="msapplication-navbutton-color" content="#1976d2">
+    <meta name="msapplication-TileColor" content="#1976d2">
+    <meta name="browsermode" content="application">
+    <meta name="nightmode" content="disable">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@chafan/vditor@3.8.2-chafan.3/dist/index.css"
