--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src <%= VUE_APP_DEFAULT_SRC %>; style-src <%= VUE_APP_STYLE_SRC %>; script-src <%= VUE_APP_SCRIPT_SRC %>; connect-src <%= VUE_APP_CONNECT_SRC %>; frame-src <%= VUE_APP_FRAME_SRC %>; img-src *"
+      content="default-src <%= VUE_APP_DEFAULT_SRC %>; style-src <%= VUE_APP_STYLE_SRC %>; script-src <%= VUE_APP_SCRIPT_SRC %>; connect-src <%= VUE_APP_CONNECT_SRC %>; frame-src <%= VUE_APP_FRAME_SRC %>; img-src * data:;"
     />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <script async src="<%= VUE_APP_APPZI %>"></script>
@@ -34,13 +34,13 @@
     <meta name="keywords" content="Cha, Fan, Chafan, 茶饭, 社交, 问答" />
     <meta name="theme-color" content="#1976d2" />
     <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="<%= VUE_APP_NAME %>">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <meta name="msapplication-navbutton-color" content="#1976d2">
-    <meta name="msapplication-TileColor" content="#1976d2">
-    <meta name="browsermode" content="application">
-    <meta name="nightmode" content="disable">
+    <meta name="apple-mobile-web-app-title" content="<%= VUE_APP_NAME %>" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="msapplication-navbutton-color" content="#1976d2" />
+    <meta name="msapplication-TileColor" content="#1976d2" />
+    <meta name="browsermode" content="application" />
+    <meta name="nightmode" content="disable" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@chafan/vditor@3.8.2-chafan.3/dist/index.css"
