--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
     <meta name="msapplication-TileColor" content="#1976d2" />
     <meta name="browsermode" content="application" />
     <meta name="nightmode" content="disable" />
+    <link href="img/icons/apple-touch-icon.png" rel="apple-touch-icon" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@chafan/vditor@3.8.2-chafan.3/dist/index.css"
