Fix some warnings

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <link
+      defer
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.css"
       integrity="sha384-qCEsSYDSH0x5I45nNW4oXemORUZnYFtPy/FqB/OjqxabTMW5HVaaH9USK4fN3goV"
@@ -27,8 +28,14 @@
       integrity="sha384-mll67QQFJfxn0IYznZYonOWZ644AWYC+Pt2cHqMaRhXVrursRwvLnLaebdGIlYNa"
       crossorigin="anonymous"
     ></script>
-    <script src="//cdn.jsdelivr.net/npm/@chafan/vditor@3.8.2-chafan.3/dist/js/lute/lute.min.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/@chafan/vditor@3.8.2-chafan.3/dist/js/mermaid/mermaid.min.js"></script>
+    <script
+      defer
+      src="//cdn.jsdelivr.net/npm/@chafan/vditor@3.8.2-chafan.3/dist/js/lute/lute.min.js"
+    ></script>
+    <script
+      defer
+      src="//cdn.jsdelivr.net/npm/@chafan/vditor@3.8.2-chafan.3/dist/js/mermaid/mermaid.min.js"
+    ></script>
     <meta name="description" content="Chafan 茶饭 - 有深度的社交问答网站" />
     <meta name="keywords" content="Cha, Fan, Chafan, 茶饭, 社交, 问答" />
     <meta name="theme-color" content="#1976d2" />
