--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,14 @@
     ></script>
     <meta name="description" content="Chafan 茶饭 - 有深度的社交问答网站" />
     <meta name="keywords" content="Cha, Fan, Chafan, 茶饭, 社交, 问答" />
+
+    <meta property="description" content="Chafan 茶饭 - 有深度的社交问答网站" />
+    <meta property="og.title" content="Chafan" />
+    <meta property="og.site_name" content="<%= VUE_APP_NAME %>" />
+    <meta property="og.description" content="Chafan 茶饭 - 有深度的社交问答网站" />
+    <meta property="og.type" content="article" />
+    <meta property="og.url" content="https://cha.fan" />
+
     <meta name="theme-color" content="#1976d2" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="<%= VUE_APP_NAME %>" />
