--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     <meta name="keywords" content="Cha, Fan, Chafan, 茶饭, 社交, 问答" />
 
     <meta property="description" content="Chafan 茶饭 - 有深度的社交问答网站" />
-    <meta property="og.title" content="Chafan" />
+    <meta property="og.title" content="Chafan 茶饭" />
     <meta property="og.site_name" content="<%= VUE_APP_NAME %>" />
     <meta property="og.description" content="Chafan 茶饭 - 有深度的社交问答网站" />
     <meta property="og.type" content="article" />
