--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@chafan/vditor@3.8.2-chafan.3/dist/index.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/chafan-vue-editors/dist/chafan-vue-editors.min.css"
+    />
     <title><%= VUE_APP_NAME %></title>
   </head>
   <body>
