--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,11 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/chafan-vue-editors/dist/chafan-vue-editors.min.css"
+      href="https://cdn.jsdelivr.net/npm/chafan-vue-editors@0.7.10/dist/chafan-vue-editors.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@tailwindcss/typography@0.4.x/dist/typography.min.css"
     />
     <title><%= VUE_APP_NAME %></title>
   </head>
