--- a/public/index.html
+++ b/public/index.html
@@ -30,11 +30,11 @@
     ></script>
     <script
       defer
-      src="//cdn.jsdelivr.net/npm/@chafan/vditor@3.8.2-chafan.3/dist/js/lute/lute.min.js"
+      src="//cdn.jsdelivr.net/npm/@chafan/vditor@3.8.8-chafan.2/dist/js/lute/lute.min.js"
     ></script>
     <script
       defer
-      src="//cdn.jsdelivr.net/npm/@chafan/vditor@3.8.2-chafan.3/dist/js/mermaid/mermaid.min.js"
+      src="//cdn.jsdelivr.net/npm/@chafan/vditor@3.8.8-chafan.2/dist/js/i18n/zh_CN.js"
     ></script>
     <meta name="description" content="Chafan 茶饭 - 有深度的社交问答网站" />
     <meta name="keywords" content="Cha, Fan, Chafan, 茶饭, 社交, 问答" />
