--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src <%= VUE_APP_DEFAULT_SRC %>; style-src <%= VUE_APP_STYLE_SRC %>; script-src <%= VUE_APP_SCRIPT_SRC %>; font-src * data:; connect-src <%= VUE_APP_CONNECT_SRC %>; frame-src <%= VUE_APP_FRAME_SRC %>; img-src * data:;"
+      content="default-src 'self'; style-src 'self' 'unsafe-inline' <%= process.env.VUE_APP_CDN_DOMAIN %>; script-src 'self' 'unsafe-inline' <%= process.env.VUE_APP_CDN_DOMAIN %>; font-src <%= process.env.VUE_APP_CDN_DOMAIN %>; connect-src 'self' <%= process.env.VUE_APP_CDN_DOMAIN %>  *.<%= process.env.VUE_APP_HOST %>  wss://*.<%= process.env.VUE_APP_HOST %>; img-src *;"
     />
+
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
 
     <link
