Add Web Archive Button to Answer

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,12 @@
       defer
       src="//cdn.jsdelivr.net/npm/@chafan/vditor@3.8.8-chafan.2/dist/js/lute/lute.min.js"
     ></script>
-    <script src="//cdn.jsdelivr.net/npm/@chafan/vditor@3.8.8-chafan.2/dist/js/i18n/zh_CN.js"></script>
+
+    <script
+        async
+        src="//cdn.jsdelivr.net/npm/@chafan/vditor@3.8.8-chafan.2/dist/js/i18n/zh_CN.js"
+    ></script>
+
     <meta name="description" content="Chafan 茶饭 - 有深度的社交问答网站" />
     <meta name="keywords" content="Cha, Fan, Chafan, 茶饭, 社交, 问答" />
 
