fix yarn failure
Signed-off-by: Chai <bark@bite.com>

--- a/public/index.html
+++ b/public/index.html
@@ -35,12 +35,12 @@
 
     <script
       defer
-      src="//cdn.jsdelivr.net/npm/@chafan/vditor@3.8.8-chafan.2/dist/js/lute/lute.min.js"
+      src="//cdn.jsdelivr.net/npm/vditor@3.11.2/dist/js/lute/lute.min.js"
     ></script>
 
     <script
         async
-        src="//cdn.jsdelivr.net/npm/@chafan/vditor@3.8.8-chafan.2/dist/js/i18n/zh_CN.js"
+        src="//cdn.jsdelivr.net/npm/vditor@3.11.2/dist/js/i18n/zh_CN.js"
     ></script>
 
     <meta name="description" content="Chafan 茶饭 - 有深度的社交问答网站" />
@@ -65,11 +65,7 @@
     <link href="img/icons/apple-touch-icon.png" rel="apple-touch-icon" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@chafan/vditor@3.8.8-chafan.2/dist/index.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/chafan-vue-editors@0.9.4/dist/chafan-vue-editors.min.css"
+      href="https://cdn.jsdelivr.net/npm/vditor@3.11.2/dist/index.css"
     />
     <link
       rel="stylesheet"
